# v3xctrl

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CNAME  License.md  README.md  codecov.yml  index.html  public.key  pyproject.toml  pytest.ini  repo_pi.json  requirements-client.txt  requirements-dev.txt  requirements-server.txt  requirements.txt  ruff.toml  watch_tests.py
.claude/: settings.json
android/: README.md  build-native.sh  settings.gradle.kts
antennas/: Bingfu.s1p  DollaTek_Lora.s1p  EuAcesry.s1p  Nelawya.s1p  Noname_01.s1p  Noname_02.s1p  Retoo.s1p  Vievre.s1p
bash/: customize-image.sh  gst-udp-sink.sh  install.sh  record_camera.sh  send_cam.sh  send_test.sh  test-stream.sh  transmit.sh
client/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
dev-scripts/: install.sh  receive.sh  transmit.sh
docs/: Carriers.md  Client.md  ConnectionTypes.md  Control.md  Development.md  GUI.md  Hardware.md  Helpers.md  Latency.md  Modems.md  Motivation.md  Pinout.md  Release.md  SIM.md  Self-Tests.md  Streamer.md  Terminology.md  Troubleshooting.md  Web-Interface.md  packages_diff  packages_install  packages_post  packages_pre
rpi-imager/: local_repo.json  schema.json  update_repo.py  v3xctrl_repo.json  validate.py
self-test/: bandwidth_client.py  bandwidth_server.py  client.py  server.py
src/: client.py  gui_opengl.py  server.py
stats-server/: README.md  auth.py  main.py  manage_users.py  requirements.txt  stats.py
tests/: config.py  test_client.py  test_message_handler.py  test_messages.py  test_rx.py  (+3 more)
(+805 files in other folders)
