[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi-4g-streamer"
version = "0.1.0"
description = "Library for 4G video streaming on Raspberry Pi"
readme = "README.md"
requires-python = ">=3.11.4"
license = { text = "MIT" }
authors = [
  { name = "Chris Landa", email = "stylesuxx@gmail.com" }
]

dependencies = []
